tests/typechecker/should_fail/type_annotations_14.csp
f :: (M::x) -> a
f(x) = error("Whatever")
